--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         document.addEventListener('DOMContentLoaded', () => {
             const loginModal = document.getElementById('login-modal');
             const appContainer = document.getElementById('app-container');
-            const modals = { connect: document.getElementById('connect-modal'), hostsEditor: document.getElementById('hosts-editor-modal'), shortcutsEditor: document.getElementById('shortcuts-editor-modal') };
+            const modals = { connect: document.getElementById('connect-modal'), hostsEditor: document.getElementById('hosts-editor-modal'), shortcutsEditor: document.getElementById('shortcuts-editor-modal'), hostSelectModal: document.getElementById('host-select-modal') };
             modals.connect.innerHTML = `<div class="modal-box"><h2>Select Host</h2><p>Start typing to filter hosts.</p><div class="message-area" id="connect-error-message"></div><div class="loading-spinner" id="connect-loading-spinner"></div><div><input list="server-list" id="server-input" autocomplete="off" style="font-size: 1rem; padding: 0.5rem; width: calc(100% - 1rem - 110px); margin-right: 0.5rem; background: #1a1a1a; color: #d4d4d4; border: 1px solid #333; box-sizing: border-box;"/><datalist id="server-list"></datalist><button id="connect-btn" class="btn btn-primary">Connect</button></div><div class="btn-group"><button id="edit-hosts-btn" class="btn">Edit Hosts</button><button id="edit-shortcuts-btn" class="btn">Edit Shortcuts</button><button id="logout-btn" class="btn">Logout</button></div></div>`;
             modals.hostsEditor.innerHTML = `<div class="modal-box"><h2>Edit Hosts (hosts.json)</h2><textarea id="hosts-textarea"></textarea><div class="editor-buttons"><button data-action="cancel-edit" class="btn">Cancel</button><button data-action="save-hosts" class="btn btn-primary">Save</button></div></div>`;
             modals.shortcutsEditor.innerHTML = `<div class="modal-box"><h2>Edit Shortcuts (shortcuts.json)</h2><textarea id="shortcuts-textarea"></textarea><div class="editor-buttons"><button data-action="cancel-edit" class="btn">Cancel</button><button data-action="save-shortcuts" class="btn btn-primary">Save</button></div></div>`;
@@ -164,9 +164,9 @@
                             const msg = JSON.parse(event.data);
                             if(msg.type === 'error') { 
                                     alert('Error: ' + msg.message);
-                                } else if (msg.type === 'request_host_selection') {
-                                const hostSelectModal = document.getElementById('host-select-modal');
-                                hostSelectModal.innerHTML = `
+                                }
+                            else if (msg.type === 'request_host_selection') {
+                                modals.hostSelectModal.innerHTML = `
                                     <div class="modal-box">
                                         <h2>Select a Host</h2>
                                         <p>The shortcut requires a host selection. Start typing to filter.</p>
@@ -180,16 +180,18 @@
                                         </div>
                                     </div>
                                 `;
-                                hostSelectModal.classList.add('active');
+                                modals.hostSelectModal.classList.add('active');
                                 document.getElementById('dynamic-host-input').focus();
 
                                 document.getElementById('confirm-host-select').onclick = () => {
                                     const selectedHost = document.getElementById('dynamic-host-input').value;
                                     ws.send(JSON.stringify({ type: 'shortcut_execute', command: msg.command, selectedHost: selectedHost, originalHostKey: msg.requiredHostKey }));
-                                    hostSelectModal.classList.remove('active');
+                                    modals.hostSelectModal.classList.remove('active');
+                                    term.focus();
                                 };
                                 document.getElementById('cancel-host-select').onclick = () => {
-                                    hostSelectModal.classList.remove('active');
+                                    modals.hostSelectModal.classList.remove('active');
+                                    term.focus();
                                 };
                             }
                         }
